--- a/style.css
+++ b/style.css
@@ -106,3 +106,11 @@ p {
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
 }
+@media (max-width: 576px){
+  h1{
+    font-size:65px;
+  }
+  .btn{
+    display:block;
+  }
+}
